<resources>
    <string name="app_name">Actio</string>
    <string name="splash">Splash Screen</string>
    <string name="mainTextViewLogin">Login</string>
    <string name="mainTextViewUsername">Username</string>
    <string name="mainTextViewPassword">Password</string>
    <string name="mainTextViewSubmit">Submit</string>
    <string name="mainTextViewRegister">Don\'t have an account? Register here!</string>
    <string name="selectScreenUsernameText">Welcome (Username)!</string>
    <string name="selectScreenActivityButtonText">Activity Tracker</string>
    <string name="selectScreenEventButtonText">Your Events</string>
    <string name="eventListHeader">Your Events</string>
    <string name="trackingMenuText">Activity Tracker</string>
    <string name="trackingMenuButtonText">Start!</string>
    <string name="mapScreenTitle">Event Map</string>

    <string name="google_map_api_key">AIzaSyD5chaW0pfWkKsOkUapuLZ8enfLAgaONJk</string>

</resources>
